src/main/resources/scss/common/components/_grid-view.scss
%content-card {
	position: relative;
	overflow: hidden;
	display: block;

	&::after {
		content: '';
		display: block;
		//make the height not jump while loading the avatar
		// padding-top: 73.3%;//for full aspect ratio of library card icons.
		padding-top: 60%;
	}

	img {
		width: 100%;
		position: absolute;
		top: 0;
		left: 0;
	}

	label {
		position: absolute;
		bottom: 0;
		left: 0;
		right: 0;
		background: rgba(0,0,0,0.7);
		overflow: hidden;
		text-align: left;
		padding: 0.2rem 1rem;

		h3, h5, address {
			&::after {content: ' ';}
		}

		h3, h5 {
			color: white;
			text-transform: uppercase;
			overflow: hidden;
			@include ellipse();
			margin: 0;
			font-weight: 700;
		}

		h3 {
			font-size: 1.1rem;
		}

		h5 {
			color: $tertiary-grey;
			font-size: 0.5rem;
		}

		address {
			font-size: 0.8rem;
			font-style: normal;
			overflow: hidden;
			color: $primary-blue;
		}
	}
}

.library-view {
	background: #333;
}

.library-item {
	width: 180px;
	position: relative;
	overflow: visible;

	& > a {
		@extend %content-card;
		box-shadow: 0 0 5px 0 rgba(0,0,0,0.8);

		&::after {
			content: none;
		}

		img {
			background-color: #ccc;
			position: static;
			width: 100%;
			height: 132px;
			background-size: cover;
		}

		label {
			position: static;
			background: #fff;
			overflow: hidden;
			height: 5.4rem;

			h3, address {
				white-space: normal;
			}

			h3 {
				color: $primary-grey;
				font-weight: 300;
				font-size: 1rem;
				max-height: 3rem;
			}
		}
	}

	ul {
		margin: 0;
		@extend %outline;

		&.sections {
			background: #fff;
			li {
				// padding-bottom: 0;
				& > div {
					// padding: 0;
				}
			}
		}
	}
}

.grid-container {
	margin: 0 0.625rem;
}

.library-collection {
	margin: 0 0.625rem;
	padding-top: 2rem;

	h5 {
		color: #fff;
		text-transform: capitalize;
		font-weight: 600;
		font-size: 0.8rem;
		font-family: $body-font-family;

		label {
			display: inline;
			color: $secondary-grey;
			margin: 0.5em;
			font-size: 1em;
			font-weight: inherit;
			line-height: inherit;
		}
	}

	& > ul {
		@extend %touch-scroll;
		display: block;
		white-space: nowrap;
		overflow: {
			x: auto;
			y: hidden;
		}
		margin: -1rem 0 0.25rem -0.625rem;
		padding: 1rem 0 1rem 0.625rem;

		& > li {
			display: inline-block;
			vertical-align: top;
			&:not(:first-of-type) {
				margin-left: 0.625rem;
			}
		}
	}
}

.cell {
	display: inline-block;
}



.catalog-item,
.thumbnail-grid-item {
	padding-bottom: 0 !important;

	a{
		display:block;
		padding: 0.625rem;
		box-shadow: inset 0 -1px 0 0 #eaeaea;
		overflow: hidden;
	}

	.thumbnail {
		float: right;
		width: 33%;

		background: {
			size: cover;
			position: center center;
			repeat: no-repeat;
		}

		&::after {
			content: '';
			display: block;
			padding-top: 70%;
		}
	}

	h3 {
		margin-right: 35%;
	}
}


li.catalog-item {
	border-top: 1px solid #eaeaea;
	padding: 0;

	.thumbnail {
		width: 25%;
		max-width: 110px;
		float: none;
		&::after {
			padding-top: 60%;
		}
	}

	button {
		float: right;
		padding: 0.25rem 0.5rem;
		text-transform: uppercase;
		font-weight: 700;
		font-size: 0.8rem;
		border-radius: 3px;
		margin: 0 0.2rem;
		position: absolute;
		top: 50%; right: 0;
		@include transform(translateY(-50%));
		background: white;

		&.add {
			border: 1px solid $primary-blue;
			color: $primary-blue;
		}

		&.drop {
			color: $primary-red;
			border: 1px solid $primary-red;
		}
	}

	a {
		padding: 0;
		position: relative;
		box-shadow: none;
	}

	& > a {
		@include flexbox();
		.thumbnail, label {
			position: relative;
			display: inline-block;
			overflow: hidden;
		}

		label{
			@include flex(1 1 auto);
		}
		.thumbnail {
			@include flex(0 0 auto);
		}
	}

	label {
		padding: 0.625rem 65px 0.625rem 0.625rem;
	}

	h3, h5 {
		margin: 0;
		overflow: hidden;
		text-overflow: ellipsis;
		white-space: nowrap;
	}

	h3 {
		font-size: 1.2rem;
	}

	h5 {
		font-size: 0.8rem;
		font-weight: 600;
		text-transform: uppercase;
		color: $tertiary-grey;
	}
}

